wrap svgs in a span (again) to fix inline issues

--- a/_assets/styles/core/_icon.scss
+++ b/_assets/styles/core/_icon.scss
@@ -1,9 +1,15 @@
 // SVG Icon Styles
 .icon {
+    display: inline-block;
     width: 18px;
     height: 18px;
     vertical-align: sub;
     fill: currentColor;
+
+    svg {
+        width: 100%;
+        height: 100%;
+    }
 
     &.icon--info,
     &.icon--activity,
